--- a/Exercise1.html
+++ b/Exercise1.html
@@ -8,12 +8,25 @@
 		<div id="app">
 			{{ message }}
 		</div>
-		
+
+		<div id="app-2">
+			<span v-bind:title="message2">
+			Hover your mouse over me for a few seconds to see my dynamically bound title!
+			</span>
+		</div>
+
 		<script>
 			var app = new Vue({
 				el: '#app',
 				data: {
 					message: "Hello Maitalata"
+				}
+			})
+
+			var app2 = new Vue({
+				el: '#app-2',
+				data: {
+					message2: 'You loaded this page on ' + new Date().toLocaleString()
 				}
 			})
 		</script>
